<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.saymtf.habitformer.CreateTheHabitFragment"
    tools:showIn="@layout/activity_create_the_habit"
    android:id="@+id/create_the_habit" >


        <EditText android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/habit_name"
            android:hint="@string/a_habit_name_here"
            android:singleLine="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/choose_your_time"
            android:layout_marginTop="@dimen/upper_spacing"
            android:text="@string/choose_your_time"
            />

        <NumberPicker
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/habit_time"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_habit"
            android:id="@+id/create_a_habit"
            android:onClick="createTheHabit"/>

</LinearLayout>
